--- a/templates/password_reset_email.html
+++ b/templates/password_reset_email.html
@@ -267,7 +267,7 @@
 
       <div class="footer">
         <div class="footer-content">
-          <p><strong>MengedMate</strong> - Powering Your Electric Journey</p>
+          <p><strong>Evmeri</strong> - Powering Your Electric Journey</p>
           <p>&copy; {% now "Y" %} MengedMate. All rights reserved.</p>
 
           <div class="footer-links">
